[package]
name = "ndtree"
version = "0.1.0"
edition = "2021"
categories = ["tree", "octree", "collection", "data-structure"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["assert-partial-ord"]

# Force the use of the `partial-ord`. Useful when you deal with floating point numbers, which does
# not implement `Ord`.
assert-partial-ord = []
